--- a/AirBnB Edinburgh Data Investigation.ipynb
+++ b/AirBnB Edinburgh Data Investigation.ipynb
@@ -11,6 +11,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Table of Contents:\n",
+    "1. Import Libraries and Data\n",
+    "2. Investigating Target Columns\n",
+    "3. Neighbourhood\n",
+    "4. Reviews\n",
+    "5. Host\n",
+    "6. Linear Regression Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 1. Import Libraries and Data"
    ]
   },
@@ -44,6 +57,19 @@
    "metadata": {},
    "source": [
     "## 2. Investigating Target Columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this project, I'm mostly interested in looking at the factors affecting price and popularity.\n",
+    "\n",
+    "For price, I want to both look at absolute price, as well as price adjusted by the size of the property.\n",
+    "\n",
+    "For popularity, the best metric available in the data is the availability columns.\n",
+    "\n",
+    "This section investigates what data cleaning is required for these columns, as well as what are the exact best columns to be using."
    ]
   },
   {
